+++ version 3.0-beta1
* contacts: #2990 fixed: mising up contacts priorities sometimes (Vogel)

+++ version 3.0-alpha2
* notify: #2963 fixed: do not mix up New chat and New message notifications (Vogel)
* notify: #1352 fixed: reduce spacing between notifier configuration widgets (Vogel)
* jabber: replaced libiris with QXmpp (Vogel)
* jabber: #2746 fixed: application was unresponsive when trying to register new jabber account on jabbim.net (Vogel)
* jabber: #2955 fixed: fast sign in on Facebook on Windows restored (Vogel)
* jabber: #2653 fixed: show nice message when another clients uses the same resource and server disconnects (Vogel)

+++ version 3.0-alpha1
* gadu: #2937 fixed: file transfers are now compatible with GG 12 and GG Drive (Vogel)
* gui: #1713 implemented: added option to always show identity in buddies list (Vogel)
* gui: #2309 implemented: added expand/collapse items to buddies list popup menu (Vogel)
* gadu: TLS enabled by default for new accounts (Vogel)
* sound: #383 implemented: option to configure per-buddy sound file (Vogel)
* gui: #2811 fixed: do not show "Move to group" menu option if moving from Everybody or Ungroupped (Vogel)
* encryption_ng: #2952 implemented: add depreceation message (Vogel)
* gadu: #2241 implemented: update contact's avatars on GG event (Vogel)
* gui: #2944 fixed: proper behavior with different combination of window title blinking and new message count included in title (Vogel)
* gui: #2767 fixed: new look for "Add group" window (Vogel)
* unity: #2965 fixed: show progress on file transfers on Unity Launcher icon (Vogel)
* windows: #2965 fixed: show progress on file transfers on Windows icon (Vogel)

+++ version 2.1
* gui: #2970 fixed: Esc closes chat windows (Vogel)
* gui: #2995 fixed: fix licence window on Linux (Vogel)
* gadu: #2996 fixed: set status to offline after disconnected because of multilogin (Vogel)

+++ version 2.0
* unity: #2699 fixed: force indicator_docking on Unity (Vogel)