@@ -1,5 +1,6 @@
 +++ version 3.0-beta1
 * contacts: #2990 fixed: mising up contacts priorities sometimes (Vogel)
+* history: #2981 implemented: display new messages in history window as these appears (Vogel)
 
 +++ version 3.0-alpha2
 * notify: #2963 fixed: do not mix up New chat and New message notifications (Vogel)
